Remove temporary contrast fix
This is now upstream in 6.2.1 of the tech docs gem.

Closes #618

--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -4,12 +4,3 @@
 .technical-documentation .table-container td > code {
   white-space: nowrap;
 }
-
-// Temporarily override syntax highlighting to fix poor contrast for comments.
-.highlight .c,
-.highlight .cm,
-.highlight .cp,
-.highlight .c1,
-.highlight .cs { /* Comment.Special */
-  color: govuk-functional-colour(secondary-text);
-}
